--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ qt_add_qml_module(${CMAKE_PROJECT_NAME}
     VERSION 1.0
     QML_FILES
         Main.qml
+    RESOURCES
+        meshes/teapot.mesh
+    NO_RESOURCE_TARGET_PATH
 )
 
 if (APPLE AND CMAKE_SYSTEM_NAME STREQUAL "visionOS")
