カメラアクセスを許可

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
     <uses-permission android:name="com.oculus.permission.USE_ANCHOR_API"/>
     <uses-permission android:name="com.oculus.permission.USE_SCENE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="horizonos.permission.HEADSET_CAMERA"/>
     <uses-feature android:name="android.hardware.vr.headtracking" android:required="true" android:version="1"/>
     <uses-feature android:name="com.oculus.feature.PASSTHROUGH" android:required="false"/>
     <!-- %%INSERT_PERMISSIONS -->
